kubernetes.prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    field.cattle.io/creatorId: u-6luv3mfsrg
  generation: 1
  labels:
    cattle.io/creator: norman
    workload.user.cattle.io/workloadselector: deployment-edm-rflocal-configuracao-api
  name: configuracao-api
  namespace: edm-rflocal
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-edm-rflocal-configuracao-api
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cattle.io/timestamp: "2021-09-09T14:07:39Z"
      labels:
        workload.user.cattle.io/workloadselector: deployment-edm-rflocal-configuracao-api
    spec:
      containers:
      - env:
        - name: ASPNETCORE_ENVIRONMENT
          value: Development
        image: ImageName
        imagePullPolicy: Always
        name: configuracao-api
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: false
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["deployment:edm-rflocal:configuracao-api"]'
  creationTimestamp: null
  labels:
    cattle.io/creator: norman
  name: servico-configuracao-api
  ownerReferences:
  - apiVersion: v1beta1/extensions
    controller: true
    kind: Ingress
    name: edmrflocal
    uid: f4da3500-8321-11ea-8e64-0211cab92318
  selfLink: /api/v1/namespaces/edm-rflocal/services/servico-configuracao-api
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    workloadID_ingress-bpo-luz: "true"
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  generation: 1
  labels:
    cattle.io/creator: norman
  name: edmrflocal
  namespace: edm-rflocal
  selfLink: /apis/extensions/v1beta1/namespaces/edm-rflocal/ingresses/edmrflocal
spec:
  rules:
  - host: configuracao.api.eav.prod.eks-edm.container.btgpactual.net
    http:
      paths:
      - backend:
          serviceName: servico-configuracao-api
          servicePort: 80
        path: /
status:
  loadBalancer: {}
